<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Description -->
    <string name="module_ui_desc_title">Navigation Bar Component</string>
    <string name="module_ui_desc_row">Row Component</string>
    <string name="module_ui_desc_tab">Tab Component</string>
    <string name="module_ui_desc_alert">Alert Component</string>
    <string name="module_ui_desc_sheet">Action Sheet Component(Used for triggering by the user\'s active operation, effective immediately after execution)</string>
    <string name="module_ui_desc_bagde">Bagde Component</string>
    <string name="module_ui_desc_page_indicator">Page Indicator Component</string>
    <string name="module_ui_desc_notice_bar">Notice Bar Component</string>

    <!-- Dialog -->
    <string name="module_ui_dialog_title">Title</string>
    <string name="module_ui_dialog_title_single">Single Title</string>
    <string name="module_ui_dialog_detail">Details</string>
    <string name="module_ui_dialog_content">Inform the current status, information and solutions, text breaks.</string>
    <string name="module_ui_dialog_sub_tips">Supplementary instructions do not exceed one line</string>
    <string name="module_ui_dialog_gotit">Got it</string>
    <string name="module_ui_dialog_bottom_title">Inform the current status, information and solutions</string>
    <string name="module_ui_dialog_bottom_operation">Operation</string>
    <string name="module_ui_dialog_bottom_operation_normal">Normal operation</string>
    <string name="module_ui_dialog_bottom_operation_dangerous">Dangerous operation</string>
    <string name="module_ui_dialog_bottom_operation_none">Unavailable operation</string>

    <!-- Default State -->
    <string name="module_ui_ds_loading">Loading hard...</string>
    <string name="module_ui_ds_no_data">No data Austria ~</string>
    <string name="module_ui_ds_net_err">The network is going to make a difference ~</string>
    <string name="module_ui_ds_scan">Data scanning...</string>
    <string name="module_ui_ds_retry">Try again</string>

    <!-- Button -->
    <string name="module_ui_button">Button</string>
    <string name="module_ui_button_text">Text button</string>
    <string name="module_ui_button_main_disable">Page main button Disable</string>
    <string name="module_ui_button_main_press">Page main button Presss</string>
    <string name="module_ui_button_main_normal">Page main button Normal</string>
    <string name="module_ui_button_destroy_press">Destructive button Presss</string>
    <string name="module_ui_button_destroy_normal">Destructive button Normal</string>

    <!-- ScrollTab -->
    <string name="module_ui_label">Label</string>
    <string name="module_ui_label1">Label 1</string>
    <string name="module_ui_label2">Label 2</string>
    <string name="module_ui_label3">Label 3</string>
    <string name="module_ui_label4">Label 4</string>
    <string name="module_ui_labels">Label 1;Label 2</string>
    <string name="module_ui_labelss">Label 1;Label 2;Label 3;Label 4</string>
    <string name="module_ui_scrolltab">Apple;Orange</string>
    <string name="module_ui_scrolltab_list">GINGERBREAD;GINGERBREAD_MR1;HONEYCOMB;HONEYCOMB_MR1;HONEYCOMB_MR2;ICE_CREAM_SANDWICH;ICE_CREAM_SANDWICH_MR1</string>

    <!-- Notice -->
    <string name="module_ui_notice_type1">Click to jump to the notification bar style</string>
    <string name="module_ui_notice_type2">Closed Announcement bar style</string>
    <string name="module_ui_notice_type3">Announcement bar style with buttons</string>
    <string name="module_ui_notice_type4">Scrollable carousel bar style</string>

    <!-- Share -->
    <string name="module_ui_share">Share</string>
    <string name="module_ui_share_qq">QQ</string>
    <string name="module_ui_share_weixin">Weixin</string>
    <string name="module_ui_share_moments">Moments</string>
    <string name="module_ui_share_weibo">Sina</string>
    <string name="module_ui_share_sms">SMS</string>

    <string name="module_ui_share_file_name">File name</string>
    <string name="module_ui_share_link_address">Link address: </string>
    <string name="module_ui_share_retrieve_password">Retrieve password: </string>

    <!-- Operation -->
    <string name="module_ui_download">Download</string>
    <string name="module_ui_move">Move</string>
    <string name="module_ui_delete">Delete</string>
    <string name="module_ui_rename">Rename</string>
    <string name="module_ui_info">Info</string>
</resources>
