<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.d.lib.common.view.TitleLayout
        android:id="@+id/tl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lib_pub_dimen_title_height"
        android:background="@color/lib_pub_color_main"
        app:lib_pub_tl_leftDrawable="@drawable/lib_pub_ic_title_back"
        app:lib_pub_tl_middleText="Button" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/lib_pub_dimen_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button 343x46"
                android:textColor="@color/lib_pub_color_black"
                android:textSize="14dp" />

            <Button
                android:id="@+id/btn_style0"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="@dimen/lib_pub_dimen_margin"
                android:background="@drawable/lib_pub_corner_btn_main_disable"
                android:gravity="center"
                android:text="@string/module_ui_button_main_disable"
                android:textAllCaps="false"
                android:textColor="@color/lib_pub_color_white"
                android:textSize="@dimen/lib_pub_dimen_text_small" />

            <Button
                android:id="@+id/btn_style1"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="@dimen/lib_pub_dimen_margin"
                android:background="@drawable/lib_pub_corner_btn_main_press"
                android:gravity="center"
                android:text="@string/module_ui_button_main_press"
                android:textAllCaps="false"
                android:textColor="#DADADA"
                android:textSize="@dimen/lib_pub_dimen_text_small" />

            <Button
                android:id="@+id/btn_style2"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="@dimen/lib_pub_dimen_margin"
                android:background="@drawable/lib_pub_select_btn_main"
                android:gravity="center"
                android:text="@string/module_ui_button_main_normal"
                android:textAllCaps="false"
                android:textColor="@color/lib_pub_color_select_btn_main"
                android:textSize="@dimen/lib_pub_dimen_text_small" />

            <Button
                android:id="@+id/btn_style3"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="@dimen/lib_pub_dimen_margin"
                android:background="@drawable/lib_pub_corner_btn_destroy_press"
                android:gravity="center"
                android:text="@string/module_ui_button_destroy_press"
                android:textAllCaps="false"
                android:textColor="#DADADA"
                android:textSize="@dimen/lib_pub_dimen_text_small" />

            <Button
                android:id="@+id/btn_style4"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="@dimen/lib_pub_dimen_margin"
                android:background="@drawable/lib_pub_select_btn_destroy"
                android:gravity="center"
                android:text="@string/module_ui_button_destroy_normal"
                android:textAllCaps="false"
                android:textColor="@color/lib_pub_color_select_btn_main"
                android:textSize="@dimen/lib_pub_dimen_text_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Button 343x40"
                android:textColor="@color/lib_pub_color_black"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/btn_style5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/lib_pub_dimen_margin"
                android:background="@drawable/lib_pub_corner_btn_main_disable"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:text="@string/module_ui_button"
                android:textColor="@color/lib_pub_color_white"
                android:textSize="@dimen/lib_pub_dimen_text_small" />

            <TextView
                android:id="@+id/btn_style6"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/lib_pub_dimen_margin"
                android:background="@drawable/lib_pub_corner_btn_main_press"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:text="@string/module_ui_button"
                android:textColor="#DADADA"
                android:textSize="@dimen/lib_pub_dimen_text_small" />

            <TextView
                android:id="@+id/btn_style7"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/lib_pub_dimen_margin"
                android:background="@drawable/lib_pub_select_btn_main"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/module_ui_button"
                android:textColor="@color/lib_pub_color_select_btn_main"
                android:textSize="@dimen/lib_pub_dimen_text_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Button 120x40"
                android:textColor="@color/lib_pub_color_black"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_style8"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="@dimen/lib_pub_dimen_margin"
                        android:background="@drawable/lib_pub_corner_btn_main_disable"
                        android:gravity="center"
                        android:text="@string/module_ui_button"
                        android:textAllCaps="false"
                        android:textColor="@color/lib_pub_color_white"
                        android:textSize="@dimen/lib_pub_dimen_text_small" />

                    <Button
                        android:id="@+id/btn_style9"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="@dimen/lib_pub_dimen_margin"
                        android:background="@drawable/lib_pub_corner_btn_main_press"
                        android:gravity="center"
                        android:text="@string/module_ui_button"
                        android:textAllCaps="false"
                        android:textColor="#DADADA"
                        android:textSize="@dimen/lib_pub_dimen_text_small" />

                    <Button
                        android:id="@+id/btn_style10"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="@dimen/lib_pub_dimen_margin"
                        android:layout_marginTop="@dimen/lib_pub_dimen_margin"
                        android:background="@drawable/lib_pub_select_btn_main"
                        android:gravity="center"
                        android:text="@string/module_ui_button"
                        android:textAllCaps="false"
                        android:textColor="@color/lib_pub_color_select_btn_main"
                        android:textSize="@dimen/lib_pub_dimen_text_small" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/lib_pub_dimen_margin"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_style11"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="@dimen/lib_pub_dimen_margin"
                        android:background="@drawable/lib_pub_corner_txt_main_disable"
                        android:gravity="center"
                        android:text="@string/module_ui_button"
                        android:textAllCaps="false"
                        android:textColor="@color/lib_pub_color_text_disable"
                        android:textSize="@dimen/lib_pub_dimen_text_small" />

                    <Button
                        android:id="@+id/btn_style12"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="@dimen/lib_pub_dimen_margin"
                        android:background="@drawable/lib_pub_corner_txt_main_press"
                        android:gravity="center"
                        android:text="@string/module_ui_button"
                        android:textAllCaps="false"
                        android:textColor="@color/lib_pub_color_main_press"
                        android:textSize="@dimen/lib_pub_dimen_text_small" />

                    <Button
                        android:id="@+id/btn_style13"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="@dimen/lib_pub_dimen_margin"
                        android:layout_marginTop="@dimen/lib_pub_dimen_margin"
                        android:background="@drawable/lib_pub_select_txt_main"
                        android:gravity="center"
                        android:text="@string/module_ui_button"
                        android:textAllCaps="false"
                        android:textColor="@color/lib_pub_color_select_txt_main"
                        android:textSize="@dimen/lib_pub_dimen_text_small" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
